2009-03-19  Federico Mena Quintero  <federico@novell.com>

	http://bugzilla.gnome.org/show_bug.cgi?id=576006 - The
	confirmation dialog from the RANDR plugin can appear behind the
	window from gnome-display-properties.  This also depends on a
	change to gnome-settings-daemon, although it will work with older
	g-s-d as well.
	
	* xrandr-capplet.c (apply): Call the new DBus API for
	ApplyConfiguration in org.gnome.SettingsDaemon.XRANDR_2, or the
	old one if that fails.
	(begin_version2_apply_configuration): New helper function; calls
	the new API.
	(begin_version1_apply_configuration): New helper function; calls
	the old API.
	(apply_configuration_returned_cb): If the new API is not
	available, try the old one.  This makes us compatible with older
	versions of gnome-settings-daemon.
	(error_message): Allow a NULL secondary_text.

2009-03-11  Federico Mena Quintero  <federico@novell.com>

	http://bugzilla.gnome.org/show_bug.cgi?id=574865 - Crash when
	refreshing the RANDR configuration.

	* xrandr-capplet.c (select_current_output_from_dialog_position):
	Always set app->current_output; otherwise we could be left with a
	dangling pointer to the old current_output (which is invalid after
	refreshing the current_configuration).
	(on_screen_changed): Null out the current_output when we get a new
	RANDR configuration, as it will become obsolete as soon as we free
	the old configuration.

2009-03-11  Gabor Kelemen  <kelemeng@gnome.hu>

	* xrandr-capplet.c: Make the strings of the Rotation dialog appear
	translated. Bug #574693.

==================== 2.25.92 ====================

2009-02-21  Jens Granseuer  <jensgr@gmx.net>

	* xrandr-capplet.c: (error_message): GTK_DIALOG_NO_SEPARATOR cannot be
	used with GtkMessageDialog

2009-02-19  Federico Mena Quintero  <federico@novell.com>

	* xrandr-capplet.c (paint_output): Make "on" monitors have black
	text, to be consistent with GnomeRRLabeler's little labels.

2009-02-08  Jens Granseuer  <jensgr@gmx.net>
